--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to Ricky Safran's homepage!
+description: Here you can view some of my current and past data science projects.
