--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to Ricky Safran's homepage!
-description: Here you can view some of my current and past data science projects.
+title: Ricky Safran
+description: <b>21, Bay Area, CA</b> <br>I have 2 years of coding experience. I am proficient with R, Python, and SQL. Coding is the future and I am looking forward to continually improving my coding!</br>
