--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Ricky Safran
-description: <b>Bay Area, CA</b> <br>I am a 21 year old double majoring in Applied Statistics and Economics.
+description: <b>Bay Area, CA</b> <br>I am a 21 year old double majoring in Applied Statistics and Economics. Proficient in Pyhton, R, and SQL.
