--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Ricky Safran
-description: <b>Bay Area, CA</b> <br> <h5>"Nothing is impossible, the word itself says 'I'm possible'!"</h5> <h7>-Audrey Hepburn</h7>
+description: <b>Bay Area, CA</b> <br> <font size="-1">"Nothing is impossible, the word itself says 'I'm possible'!"-Audrey Hepburn</font>
